# Flask-blog-posts

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.db  app.py  config.py  docker-compose.yml  forms.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
app/: __init__.py  __init__.py.save  config.py  forms.py  models.py  routes.py
app/Database/: app.db
app/static/: main.css
app/templates/: index.liquid  login.html  profile.html  sign_up.html
app/templates/layout/: layout.html
app/templates/sections/: header.html  sidebar.html
static/images/: main.css
templates/: about.html  index.html  login.html  sign_up.html
templates/layout/: layout.html
templates/sections/: header.html
